--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
@@ -33,6 +34,7 @@
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-mkcert": "^1.17.6",
     "yup": "^1.6.1"
   },
   "devDependencies": {
